// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Messaging/AdaptiveCard Card 1`] = `
Array [
  <div
    className="wxc-adaptive-card"
  >
    <div
      className="wxc-adaptive-cards-column-set wxc-adaptive-cards-component wxc-adaptive-cards-component__container--vertical "
    >
      <div
        className="wxc-column "
      >
        <img
          className="wxc-adaptive-cards-image wxc-adaptive-cards-image__style--Person wxc-adaptive-cards-image__size--Medium"
          src="https://developer.webex.com/images/webex-teams-logo.png"
          style={
            Object {
              "backgroundColor": undefined,
              "height": "50px",
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="wxc-column "
      >
        <div
          className="wxc-text-block wxc-text-block__weight--Lighter"
        >
          Cisco Webex Teams
        </div>
        <div
          className="wxc-text-block wxc-text-block__weight--Bolder wxc-text-block__horizontalAlignment--Left wxc-text-block__wrap--true wxc-text-block__size--Large"
        >
          Buttons and Cards Release
        </div>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-adaptive-cards-component wxc-adaptive-cards-component__spacing--Padding wxc-adaptive-cards-component__container--vertical "
    >
      <div
        className="wxc-column "
      >
        <div
          className="wxc-text-block "
        >
          Release Date:
        </div>
        <div
          className="wxc-text-block wxc-text-block__weight--Lighter"
        >
          Product:
        </div>
        <div
          className="wxc-text-block wxc-text-block__weight--Lighter"
        >
          OS:
        </div>
      </div>
      <div
        className="wxc-column "
      >
        <div
          className="wxc-text-block "
        >
          Aug 6, 2019
        </div>
        <div
          className="wxc-text-block wxc-text-block__weight--Lighter"
        >
          Webex Teams
        </div>
        <div
          className="wxc-text-block wxc-text-block__weight--Lighter"
        >
          Mac, Windows, Web
        </div>
      </div>
    </div>
    <div
      className="wxc-text-block wxc-text-block__wrap--true"
    >
      We're making it easier for you to interact with bots and integrations in Webex Teams. When your bot sends information in a space that includes a card with buttons, you can now easily interact with it.
    </div>
    <div
      className="wxc-text-block "
    >
      Buttons and Cards Resources:
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-adaptive-cards-component wxc-adaptive-cards-component__container--vertical "
    >
      <div
        className="wxc-column "
      >
        <img
          alt=""
          className="wxc-adaptive-cards-image wxc-adaptive-cards-image__size--Small"
          src="https://developer.webex.com/images/link-icon.png"
          style={
            Object {
              "backgroundColor": undefined,
              "height": undefined,
              "width": "30px",
            }
          }
        />
      </div>
      <div
        className="wxc-column "
      >
        <div
          className="wxc-text-block wxc-text-block__horizontalAlignment--Left wxc-text-block__size--Medium"
        >
          [Developer Portal Buttons and Cards Guide]()
        </div>
      </div>
    </div>
    <div>
      <h5>
        ActionSet Component
      </h5>
      <pre
        className="wxc-adaptive-cards-unknown-component"
      >
        {
    "type": "ActionSet",
    "actions": [
        {
            "type": "Action.Submit",
            "title": "Subscribe to Release Notes",
            "data": {
                "subscribe": true
            }
        }
    ],
    "horizontalAlignment": "Left"
}
      </pre>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/AdaptiveCard Column 1`] = `
Array [
  <div
    className="wxc-adaptive-card"
  >
    <div
      className="wxc-adaptive-cards-column-set wxc-adaptive-cards-component wxc-adaptive-cards-component__container--vertical "
    >
      <div
        className="wxc-column "
      >
        <div
          className="wxc-text-block "
        >
          Column 1
        </div>
        <img
          className="wxc-adaptive-cards-image wxc-adaptive-cards-image__size--medium"
          src="https://adaptivecards.io/content/cats/1.png"
          style={
            Object {
              "backgroundColor": undefined,
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="wxc-column "
      >
        <div
          className="wxc-text-block "
        >
          Column 2
        </div>
        <img
          className="wxc-adaptive-cards-image wxc-adaptive-cards-image__size--medium"
          src="https://adaptivecards.io/content/cats/1.png"
          style={
            Object {
              "backgroundColor": undefined,
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="wxc-column "
      >
        <div
          className="wxc-text-block "
        >
          Column 3
        </div>
        <img
          className="wxc-adaptive-cards-image wxc-adaptive-cards-image__size--medium"
          src="https://adaptivecards.io/content/cats/1.png"
          style={
            Object {
              "backgroundColor": undefined,
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-adaptive-cards-component wxc-adaptive-cards-component__container--vertical "
    >
      <div
        className="wxc-column "
      />
      <div
        className="wxc-column "
      />
      <div
        className="wxc-column "
      />
    </div>
    <div
      className="wxc-text-block "
    >
      You can even repeat the background image...
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-adaptive-cards-component wxc-adaptive-cards-component__container--vertical "
    >
      <div
        className="wxc-column "
      />
      <div
        className="wxc-column "
      >
        <div
          className="wxc-text-block wxc-text-block__horizontalAlignment--Center wxc-text-block__wrap--true"
        >
          Those are some neat arrows
        </div>
      </div>
    </div>
    <div
      className="wxc-text-block "
    >
      Horizontal repeat...
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-adaptive-cards-component wxc-adaptive-cards-component__container--vertical "
    >
      <div
        className="wxc-column "
      />
      <div
        className="wxc-column "
      />
      <div
        className="wxc-column "
      />
    </div>
    <div
      className="wxc-text-block "
    >
      Vertical repeat...
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-adaptive-cards-component wxc-adaptive-cards-component__container--vertical "
    >
      <div
        className="wxc-column "
      />
      <div
        className="wxc-column "
      />
      <div
        className="wxc-column "
      />
    </div>
    <div
      className="wxc-text-block "
    >
      Bleed left
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-adaptive-cards-component wxc-adaptive-cards-component__container--vertical wxc-adaptive-cards-column-set__style--emphasis"
    >
      <div
        className="wxc-column wxc-column__style--good wxc-column__bleed--true"
      >
        <div
          className="wxc-text-block "
        >
          Column 1
        </div>
      </div>
      <div
        className="wxc-column wxc-column__style--attention"
      >
        <div
          className="wxc-text-block "
        >
          Column 2
        </div>
      </div>
      <div
        className="wxc-column wxc-column__style--warning"
      >
        <div
          className="wxc-text-block "
        >
          Column 3
        </div>
      </div>
    </div>
    <div
      className="wxc-text-block "
    >
      Bleed center
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-adaptive-cards-component wxc-adaptive-cards-component__container--vertical wxc-adaptive-cards-column-set__style--emphasis"
    >
      <div
        className="wxc-column wxc-column__style--good"
      >
        <div
          className="wxc-text-block "
        >
          Column 1
        </div>
      </div>
      <div
        className="wxc-column wxc-column__style--attention wxc-column__bleed--true"
      >
        <div
          className="wxc-text-block "
        >
          Column 2
        </div>
      </div>
      <div
        className="wxc-column wxc-column__style--warning"
      >
        <div
          className="wxc-text-block "
        >
          Column 3
        </div>
      </div>
    </div>
    <div
      className="wxc-text-block "
    >
      Bleed right
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-adaptive-cards-component wxc-adaptive-cards-component__container--vertical wxc-adaptive-cards-column-set__style--emphasis"
    >
      <div
        className="wxc-column wxc-column__style--good"
      >
        <div
          className="wxc-text-block "
        >
          Column 1
        </div>
      </div>
      <div
        className="wxc-column wxc-column__style--attention"
      >
        <div
          className="wxc-text-block "
        >
          Column 2
        </div>
      </div>
      <div
        className="wxc-column wxc-column__style--warning wxc-column__bleed--true"
      >
        <div
          className="wxc-text-block "
        >
          Column 3
        </div>
      </div>
    </div>
    <div
      className="wxc-text-block "
    >
      Bleed all
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-adaptive-cards-component wxc-adaptive-cards-component__container--vertical wxc-adaptive-cards-column-set__style--emphasis"
    >
      <div
        className="wxc-column wxc-column__style--good wxc-column__bleed--true"
      >
        <div
          className="wxc-text-block "
        >
          Column 1
        </div>
      </div>
      <div
        className="wxc-column wxc-column__style--attention wxc-column__bleed--true"
      >
        <div
          className="wxc-text-block "
        >
          Column 2
        </div>
      </div>
      <div
        className="wxc-column wxc-column__style--warning wxc-column__bleed--true"
      >
        <div
          className="wxc-text-block "
        >
          Column 3
        </div>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-adaptive-cards-component wxc-adaptive-cards-component__container--vertical "
    >
      <div
        className="wxc-column "
      >
        <div>
          <h5>
            Graph Component
          </h5>
          <pre
            className="wxc-adaptive-cards-unknown-component"
          >
            {
    "type": "Graph"
}
          </pre>
        </div>
      </div>
      <div
        className="wxc-column "
      >
        <div>
          <h5>
            Graph Component
          </h5>
          <pre
            className="wxc-adaptive-cards-unknown-component"
          >
            {
    "type": "Graph"
}
          </pre>
        </div>
      </div>
      <div
        className="wxc-column "
      >
        <div
          className="wxc-text-block wxc-text-block__wrap--true"
        >
          This is a column
        </div>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-adaptive-cards-component wxc-adaptive-cards-component__container--vertical wxc-adaptive-cards-column-set__style--emphasis"
    >
      <div
        className="wxc-column wxc-column__style--default"
      >
        <div
          className="wxc-text-block wxc-text-block__wrap--true"
        >
          The columnset has a minHeight of 100px while this column has a minHeight of 200px so it should override
        </div>
      </div>
      <div
        className="wxc-column wxc-column__style--default"
      >
        <div>
          <h5>
            FactSet Component
          </h5>
          <pre
            className="wxc-adaptive-cards-unknown-component"
          >
            {
    "type": "FactSet",
    "facts": [
        {
            "title": "ColumnSet",
            "value": "MinHeight: 100px"
        },
        {
            "title": "Column 1",
            "value": "MinHeight: 200px"
        },
        {
            "title": "Column 2",
            "value": "MinHeight: 50px"
        }
    ]
}
          </pre>
        </div>
      </div>
    </div>
    <div
      className="wxc-text-block wxc-text-block__wrap--true wxc-text-block__size--Medium"
    >
      The middle column is set to rtl
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-adaptive-cards-component wxc-adaptive-cards-component__spacing--Medium wxc-adaptive-cards-component__container--vertical "
    >
      <div
        className="wxc-column "
      >
        <div
          className="wxc-text-block wxc-text-block__wrap--true"
        >
          Column One
        </div>
      </div>
      <div
        className="wxc-column wxc-column__rtl--true"
      >
        <div
          className="wxc-text-block wxc-text-block__wrap--true"
        >
          العمود الثاني
        </div>
      </div>
      <div
        className="wxc-column "
      >
        <div
          className="wxc-text-block wxc-text-block__wrap--true"
        >
          Column three
        </div>
      </div>
    </div>
    <div
      className="wxc-container"
    >
      <div
        className="wxc-adaptive-cards-column-set wxc-adaptive-cards-component wxc-adaptive-cards-component__container--vertical "
      >
        <div
          className="wxc-column "
        >
          <img
            className="wxc-adaptive-cards-image wxc-adaptive-cards-image__size--medium"
            src="https://adaptivecards.io/content/cats/3.png"
            style={
              Object {
                "backgroundColor": undefined,
                "height": undefined,
                "width": undefined,
              }
            }
          />
          <div
            className="wxc-text-block wxc-text-block__horizontalAlignment--center wxc-text-block__weight--bolder"
          >
            SHADES
          </div>
        </div>
        <div
          className="wxc-column "
        >
          <div
            className="wxc-text-block wxc-text-block__horizontalAlignment--center"
          >
            Dec 4
          </div>
          <div
            className="wxc-text-block wxc-text-block__horizontalAlignment--center"
          >
            Final
          </div>
          <div
            className="wxc-text-block wxc-text-block__size--extraLarge wxc-text-block__horizontalAlignment--center"
          >
            7 - 40
          </div>
        </div>
        <div
          className="wxc-column "
        >
          <img
            className="wxc-adaptive-cards-image wxc-adaptive-cards-image__horizontalAlignment--center wxc-adaptive-cards-image__size--medium"
            src="https://adaptivecards.io/content/cats/2.png"
            style={
              Object {
                "backgroundColor": undefined,
                "height": undefined,
                "width": undefined,
              }
            }
          />
          <div
            className="wxc-text-block wxc-text-block__horizontalAlignment--center wxc-text-block__weight--bolder"
          >
            SKINS
          </div>
        </div>
      </div>
    </div>
    <div
      className="wxc-text-block wxc-text-block__weight--bolder"
    >
      Try clicking a column!
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-adaptive-cards-component wxc-adaptive-cards-component__container--vertical "
    >
      <div
        className="wxc-column "
      >
        <div
          className="wxc-text-block "
        >
          Column 1
        </div>
        <img
          className="wxc-adaptive-cards-image wxc-adaptive-cards-image__size--medium"
          src="https://adaptivecards.io/content/cats/1.png"
          style={
            Object {
              "backgroundColor": undefined,
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="wxc-column "
      >
        <div
          className="wxc-text-block "
        >
          Column 2
        </div>
        <img
          className="wxc-adaptive-cards-image wxc-adaptive-cards-image__size--medium"
          src="https://adaptivecards.io/content/cats/1.png"
          style={
            Object {
              "backgroundColor": undefined,
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="wxc-column "
      >
        <div
          className="wxc-text-block "
        >
          Column 3
        </div>
        <img
          className="wxc-adaptive-cards-image wxc-adaptive-cards-image__size--medium"
          src="https://adaptivecards.io/content/cats/1.png"
          style={
            Object {
              "backgroundColor": undefined,
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-adaptive-cards-component wxc-adaptive-cards-component__container--vertical "
    >
      <div
        className="wxc-column "
      >
        <div
          className="wxc-text-block "
        >
          No Style
        </div>
      </div>
      <div
        className="wxc-column wxc-column__style--default"
      >
        <div
          className="wxc-text-block "
        >
          Default Style
        </div>
      </div>
      <div
        className="wxc-column wxc-column__style--emphasis"
      >
        <div
          className="wxc-text-block "
        >
          Emphasis Style
        </div>
        <div
          className="wxc-container"
        >
          <div
            className="wxc-text-block "
          >
            Container no style
          </div>
        </div>
        <div
          className="wxc-container wxc-container__style--default"
        >
          <div
            className="wxc-text-block "
          >
            Container default style
          </div>
        </div>
        <div
          className="wxc-container wxc-container__style--emphasis"
        >
          <div
            className="wxc-text-block "
          >
            Container emphasis style
          </div>
        </div>
      </div>
    </div>
    <div
      className="wxc-text-block "
    >
      Hi,
    </div>
    <div
      className="wxc-text-block "
    >
      MasterHip
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-adaptive-cards-component wxc-adaptive-cards-component__container--vertical "
    >
      <div
        className="wxc-column "
      >
        <div
          className="wxc-text-block "
        >
          Column 1
        </div>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-adaptive-cards-component wxc-adaptive-cards-component__container--vertical "
    >
      <div
        className="wxc-column "
      >
        <div
          className="wxc-text-block "
        >
          (auto)
        </div>
        <img
          className="wxc-adaptive-cards-image wxc-adaptive-cards-image__size--medium"
          src="https://adaptivecards.io/content/adaptive-card-50.png"
          style={
            Object {
              "backgroundColor": undefined,
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="wxc-column "
      >
        <div
          className="wxc-text-block wxc-text-block__horizontalAlignment--center"
        >
          (stretch)
        </div>
        <img
          className="wxc-adaptive-cards-image wxc-adaptive-cards-image__horizontalAlignment--center wxc-adaptive-cards-image__size--medium"
          src="https://adaptivecards.io/content/adaptive-card-50.png"
          style={
            Object {
              "backgroundColor": undefined,
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="wxc-column "
      >
        <div
          className="wxc-text-block "
        >
          (auto)
        </div>
        <img
          className="wxc-adaptive-cards-image wxc-adaptive-cards-image__size--medium"
          src="https://adaptivecards.io/content/adaptive-card-50.png"
          style={
            Object {
              "backgroundColor": undefined,
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/AdaptiveCard Column Set 1`] = `
Array [
  <div
    className="wxc-adaptive-card"
  >
    <div
      className="wxc-text-block wxc-text-block__weight--bolder"
    >
      Pick up where you left off?
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-adaptive-cards-component wxc-adaptive-cards-component__spacing--medium wxc-adaptive-cards-component__container--vertical "
    >
      <div
        className="wxc-column "
      >
        <img
          className="wxc-adaptive-cards-image wxc-adaptive-cards-image__size--medium"
          src="https://unsplash.it/80?image=1083"
          style={
            Object {
              "backgroundColor": undefined,
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="wxc-column "
      >
        <div
          className="wxc-text-block "
        >
          Silver Star Mountain
        </div>
        <div
          className="wxc-text-block "
        >
          Maps
        </div>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-adaptive-cards-component wxc-adaptive-cards-component__container--vertical "
    >
      <div
        className="wxc-column "
      >
        <img
          className="wxc-adaptive-cards-image wxc-adaptive-cards-image__size--medium"
          src="https://unsplash.it/80?image=1082"
          style={
            Object {
              "backgroundColor": undefined,
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="wxc-column wxc-column__style--emphasis"
      >
        <div
          className="wxc-text-block "
        >
          Kitchen Remodel
        </div>
        <div
          className="wxc-text-block "
        >
          With EMPHASIS
        </div>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-adaptive-cards-component wxc-adaptive-cards-component__container--vertical "
    >
      <div
        className="wxc-column "
      >
        <img
          className="wxc-adaptive-cards-image wxc-adaptive-cards-image__size--medium"
          src="https://unsplash.it/80?image=1080"
          style={
            Object {
              "backgroundColor": undefined,
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="wxc-column "
      >
        <div
          className="wxc-text-block "
        >
          The Witcher
        </div>
        <div
          className="wxc-text-block "
        >
          Netflix
        </div>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/AdaptiveCard Container 1`] = `
Array [
  <div
    className="wxc-adaptive-card"
  >
    <div
      className="wxc-container"
    >
      <div
        className="wxc-text-block "
      >
        This is some text
      </div>
      <img
        className="wxc-adaptive-cards-image wxc-adaptive-cards-image__size--large"
        src="https://adaptivecards.io/content/cats/1.png"
        style={
          Object {
            "backgroundColor": undefined,
            "height": undefined,
            "width": undefined,
          }
        }
      />
    </div>
    <div
      className="wxc-container wxc-container__style--default"
    >
      <div
        className="wxc-text-block "
      >
        This container has the default style
      </div>
      <div
        className="wxc-text-block "
      >
        color: default
      </div>
      <div
        className="wxc-text-block "
      >
        color: accent
      </div>
      <div
        className="wxc-text-block "
      >
        color: good
      </div>
      <div
        className="wxc-text-block "
      >
        color: warning
      </div>
      <div
        className="wxc-text-block "
      >
        color: attention
      </div>
      <div
        className="wxc-text-block "
      >
        color: light
      </div>
      <div
        className="wxc-text-block "
      >
        color: dark
      </div>
    </div>
    <div
      className="wxc-container wxc-container__style--accent"
    >
      <div
        className="wxc-text-block "
      >
        This container has the accent style
      </div>
      <div
        className="wxc-text-block "
      >
        color: default
      </div>
      <div
        className="wxc-text-block "
      >
        color: accent
      </div>
      <div
        className="wxc-text-block "
      >
        color: good
      </div>
      <div
        className="wxc-text-block "
      >
        color: warning
      </div>
      <div
        className="wxc-text-block "
      >
        color: attention
      </div>
      <div
        className="wxc-text-block "
      >
        color: light
      </div>
      <div
        className="wxc-text-block "
      >
        color: dark
      </div>
      <div
        className="wxc-container"
      >
        <div
          className="wxc-text-block "
        >
          Contained container - no style
        </div>
      </div>
      <div
        className="wxc-container wxc-container__style--emphasis"
      >
        <div
          className="wxc-text-block "
        >
          Contained container - emphasis
        </div>
      </div>
      <div
        className="wxc-container wxc-container__style--default"
      >
        <div
          className="wxc-text-block "
        >
          Contained container - default
        </div>
      </div>
      <div
        className="wxc-container wxc-container__style--good"
      >
        <div
          className="wxc-text-block "
        >
          Contained container - good
        </div>
      </div>
      <div
        className="wxc-container wxc-container__style--warning"
      >
        <div
          className="wxc-text-block "
        >
          Contained container - warning
        </div>
      </div>
      <div
        className="wxc-container wxc-container__style--attention"
      >
        <div
          className="wxc-text-block "
        >
          Contained container - attention
        </div>
      </div>
      <div
        className="wxc-container wxc-container__style--accent"
      >
        <div
          className="wxc-text-block "
        >
          Contained container - accent
        </div>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/AdaptiveCard Image 1`] = `
Array [
  <div
    className="wxc-adaptive-card"
  >
    <img
      className="wxc-adaptive-cards-image wxc-adaptive-cards-image__style--person wxc-adaptive-cards-image__size--medium"
      src="https://adaptivecards.io/content/cats/1.png"
      style={
        Object {
          "backgroundColor": "blue",
          "height": undefined,
          "width": undefined,
        }
      }
    />
    <img
      className="wxc-adaptive-cards-image wxc-adaptive-cards-image__size--small"
      src="https://adaptivecards.io/content/cats/1.png"
      style={
        Object {
          "backgroundColor": undefined,
          "height": "60px",
          "width": "60px",
        }
      }
    />
    <img
      className="wxc-adaptive-cards-image wxc-adaptive-cards-image__size--large"
      src="https://adaptivecards.io/content/cats/2.png"
      style={
        Object {
          "backgroundColor": "#cdcdcd",
          "height": undefined,
          "width": undefined,
        }
      }
    />
    <img
      className="wxc-adaptive-cards-image wxc-adaptive-cards-image__size--medium"
      src="https://adaptivecards.io/content/cats/3.png"
      style={
        Object {
          "backgroundColor": undefined,
          "height": undefined,
          "width": undefined,
        }
      }
    />
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/AdaptiveCard Image Set 1`] = `
Array [
  <div
    className="wxc-adaptive-card"
  >
    <div
      className="wxc-adaptive-cards-image-set"
    >
      <img
        className="wxc-adaptive-cards-image wxc-adaptive-cards-image__style--person wxc-adaptive-cards-image__size--large"
        src="https://adaptivecards.io/content/cats/1.png"
        style={
          Object {
            "backgroundColor": "red",
            "height": undefined,
            "width": undefined,
          }
        }
      />
      <img
        className="wxc-adaptive-cards-image wxc-adaptive-cards-image__size--medium"
        src="https://adaptivecards.io/content/cats/3.png"
        style={
          Object {
            "backgroundColor": undefined,
            "height": undefined,
            "width": undefined,
          }
        }
      />
      <img
        className="wxc-adaptive-cards-image wxc-adaptive-cards-image__size--small"
        src="https://adaptivecards.io/content/cats/1.png"
        style={
          Object {
            "backgroundColor": undefined,
            "height": undefined,
            "width": undefined,
          }
        }
      />
      <img
        className="wxc-adaptive-cards-image wxc-adaptive-cards-image__size--medium"
        src="https://adaptivecards.io/content/cats/1.png"
        style={
          Object {
            "backgroundColor": "#cdcdcd",
            "height": "60px",
            "width": "60px",
          }
        }
      />
      <img
        className="wxc-adaptive-cards-image wxc-adaptive-cards-image__size--medium"
        src="https://adaptivecards.io/content/cats/2.png"
        style={
          Object {
            "backgroundColor": undefined,
            "height": undefined,
            "width": undefined,
          }
        }
      />
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/AdaptiveCard Text Block 1`] = `
Array [
  <div
    className="wxc-adaptive-card"
  >
    <div
      className="wxc-text-block "
    >
      color: default
    </div>
    <div
      className="wxc-text-block "
    >
      color: accent
    </div>
    <div
      className="wxc-text-block "
    >
      color: good
    </div>
    <div
      className="wxc-text-block "
    >
      color: warning
    </div>
    <div
      className="wxc-text-block "
    >
      color: attention
    </div>
    <div
      className="wxc-text-block "
    >
      color: light
    </div>
    <div
      className="wxc-text-block "
    >
      color: dark
    </div>
    <div
      className="wxc-text-block "
    >
      Font type not set.
    </div>
    <div
      className="wxc-text-block wxc-text-block__fontType--default"
    >
      Font type set to *default*.
    </div>
    <div
      className="wxc-text-block wxc-text-block__fontType--monospace"
    >
      Font type set to *monospace*.
    </div>
    <div
      className="wxc-text-block wxc-text-block__horizontalAlignment--left"
    >
      **horizontalAlignment:left**
    </div>
    <div
      className="wxc-text-block wxc-text-block__horizontalAlignment--center"
    >
      **horizontalAlignment:center**
    </div>
    <div
      className="wxc-text-block wxc-text-block__horizontalAlignment--right"
    >
      **horizontalAlignment:right**
    </div>
    <div
      className="wxc-text-block "
    >
      isSubtle:false
    </div>
    <div
      className="wxc-text-block "
    >
      isSubtle:true
    </div>
    <div
      className="wxc-text-block wxc-text-block__wrap--true"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
    <div
      className="wxc-text-block wxc-text-block__wrap--true"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
    <div
      className="wxc-text-block "
    >
      size:default
    </div>
    <div
      className="wxc-text-block wxc-text-block__size--small"
    >
      size:small
    </div>
    <div
      className="wxc-text-block wxc-text-block__size--default"
    >
      size:default
    </div>
    <div
      className="wxc-text-block wxc-text-block__size--medium"
    >
      size:medium
    </div>
    <div
      className="wxc-text-block wxc-text-block__size--large"
    >
      size:large
    </div>
    <div
      className="wxc-text-block wxc-text-block__size--extraLarge"
    >
      size:extraLarge
    </div>
    <div
      className="wxc-text-block wxc-text-block__weight--lighter"
    >
      weight: lighter
    </div>
    <div
      className="wxc-text-block wxc-text-block__weight--default"
    >
      weight: default
    </div>
    <div
      className="wxc-text-block wxc-text-block__weight--bolder"
    >
      weight: bolder
    </div>
    <div
      className="wxc-text-block wxc-text-block__wrap--false"
    >
      **wrap: false** Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
    </div>
    <div
      className="wxc-text-block wxc-text-block__wrap--true"
    >
      **wrap: true** Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
    <div
      className="wxc-text-block wxc-text-block__style--heading wxc-text-block__wrap--true"
      role="heading"
    >
      Style set to heading
    </div>
    <div
      className="wxc-text-block wxc-text-block__style--heading wxc-text-block__wrap--true"
      role="heading"
    >
      Style set to heading, color set to good
    </div>
    <div
      className="wxc-text-block wxc-text-block__style--default wxc-text-block__wrap--true"
    >
      Style set to default
    </div>
    <div
      className="wxc-text-block wxc-text-block__wrap--true"
    >
      Style unset
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;
